--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -60,7 +60,11 @@
 
                         <td>
                             <a href="{{ url_for('question.edit', q_id=q.id) }}" class="btn-edit">Sửa</a>
-                            <button class="btn-delete">Xóa</button>
+                            <form action="{{ url_for('question.delete', q_id=q.id) }}" method="post"
+                                style="display:inline;">
+                                <button type="submit" class="btn-delete"
+                                    onclick="return confirm('Bạn có chắc muốn xóa?');">Xóa</button>
+                            </form>
                         </td>
                     </tr>
                     {% else %}
