--- a/views/question_list.html
+++ b/views/question_list.html
@@ -3,7 +3,7 @@
 {% block title %}Quản lý câu hỏi{% endblock %}
 
 {% block css %}
-<link rel="stylesheet" href="{{ url_for('static', filename='css/list_question.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/question_list.css') }}">
 {% endblock %}
 
 {% block content %}
