xem danh sach bai thi

--- a/views/base.html
+++ b/views/base.html
@@ -22,6 +22,7 @@
         <a href="/dashboard">Trang Chủ </a>
         <a href="/question/list">Ngân hàng câu hỏi</a>
         <a href="{{ url_for('exam.exam_list') }}"> Đề thi</a>
+        <a href="{{ url_for('exam.exam_session_list') }}">Bài thi</a>
     </nav>
 
     <nav class="nav-right">
