--- a/views/exam_session_list.html
+++ b/views/exam_session_list.html
@@ -8,6 +8,15 @@
 
 {% block content %}
 <div class="exam-container">
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+    <div class="flash-box">
+        {% for msg in messages %}
+        <div class="flash-message">{{ msg }}</div>
+        {% endfor %}
+    </div>
+    {% endif %}
+    {% endwith %}
     <div class="header">
         <h2>📝 Danh sách bài thi</h2>
     </div>
@@ -34,8 +43,7 @@
                 <td>{{ e.question_ids | length }}</td>
                 <td>{{ e.duration or 60 }} phút</td>
                 <td>
-                    <a class="btn-start"
-                       href="{{ url_for('exam.start_exam', id=e.id) }}">
+                    <a class="btn-start" href="{{ url_for('exam.start_exam', id=e.id) }}">
                         ▶️
                     </a>
                 </td>
