xem ket qua thi

--- a/views/exam_session_list.html
+++ b/views/exam_session_list.html
@@ -47,6 +47,11 @@
                         ▶️
                     </a>
                 </td>
+                <td>
+                    <a class="btn-view" href="{{ url_for('exam.view_my_result', exam_id=e.id) }}">
+                        👁️
+                    </a>
+                </td>
             </tr>
             {% endfor %}
         </tbody>
