--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -5,17 +5,17 @@
 {% block content %}
 
 <div class="dashboard-page">
-    <div class="dashboard">
-        <div class="dashboard-header">
-            <h1>Quản lý</h1>
-            <p>Chọn một chức năng từ menu để bắt đầu làm việc.</p>
+    <section class="anh-full">
+        <div class="anh-overlay"></div>
 
-            <div class="dashboard-actions">
-                <a href="/question/add" class="btn btn-primary">➕ Thêm câu hỏi</a>
-                <a href="/question/list" class="btn btn-outline"> Danh sách câu hỏi</a>
-            </div>
+        <div class="anh-content">
+            <h2>Hệ thống thi trắc nghiệm</h2>
+            <p>
+                Quản lý câu hỏi, đề thi và kết quả học sinh
+                một cách hiệu quả và trực quan
+            </p>
         </div>
-    </div>
+    </section>
 </div>
 
 {% endblock %}
